생산성 및 유틸 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,44 @@
+spring:
+  application:
+    name: hyomee
+  h2:
+    console:
+      enabled: true                     # 콘솔 사용
+      path: /h2-console                 # 콘솔 접근 uri
+      settings.trace: false             # 추적 활성화
+      settings.web-allow-others: false  # CORS로 다른 사용자 접근 허용 여부
+  datasource:
+    url: jdbc:h2:file:./data/demodb     # 파일 저장소
+    username: sa
+    password: hhs1234
+    driverClassName: org.h2.Driver
+    hikari:                             # DB Connection Pool
+      auto-commit: true                 # 자동커밋 여부. (default: true)
+      connection-test-query: SELECT 1   # connection 유효성 검사 쿼리
+      minimum-idle: 10                  # pool에 유지할 유휴 connection 최소 개수
+      maximum-pool-size: 50             # pool에 유지시킬 수 있는 최대 connection 수
+      pool-name: pool-hyomee            # connection pool 이름
+      max-lifetime: 600000
+      leak-detection-threshold: 300000
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect  # 접속할 database의 SQL Dialect 설정, JPA를 활용하여 동적 쿼리 생성시, database에 맞는 방언 sql을 생성
+    properties:
+      hibernate:
+        show-sql: true                  #  모든 SQL문을 콘솔로 출력
+        format_sql: true                # 모든 SQL문을 콘솔로 출력해 준다.
+        hbm2ddl.auto: update            # 앱 시작시 @Entity로 정의한 테이블의 create 문 실행
+        use_sql_comments: true          # 디버깅이 용이하도록 SQL문 이외에 추가적인 정보를 출력
+#        implicit_naming_strategy: org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
+#        physical_naming_strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+    open-in-view: false
 
+
+logging:
+  level:
+    org:
+      hibernate:
+        SQL: DEBUG
+    type:
+      descriptor:
+        sql:
+          BasicBinder=TRACE:
