--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator:3.1.0'
     implementation 'org.springframework.boot:spring-boot-starter-web:3.1.0'
     testImplementation 'org.projectlombok:lombok:1.18.26'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     /**********************************************
      * db 관련
@@ -90,6 +91,7 @@ dependencies {
     /**********************************************
      * Test
      **********************************************/
+    implementation 'org.mockito:mockito-core:3.7.7'
     // testImplementation 'org.springframework.amqp:spring-rabbit-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.0'
     testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.2'
