초기데이터

--- a/src/main/resources/config/custom/custom.yml
+++ b/src/main/resources/config/custom/custom.yml
@@ -16,4 +16,4 @@ pageing:
   properties: A,B
 
 mockdir: D:\PRJ\hybird\mock\
-tourlistDir: D:\STUDY\SPRINGBOOT\hybird\data\
+tourlistDir: D:\STUDY\SPRINGBOOT\hybird\initData\
