ElasticSearch 기초 데이터 등록

--- a/src/main/resources/config/custom/custom.yml
+++ b/src/main/resources/config/custom/custom.yml
@@ -16,4 +16,4 @@ pageing:
   properties: A,B
 
 mockdir: D:\PRJ\hybird\mock\
-tourlistDir: D:\STUDY\SPRINGBOOT\hybird\initData\
+tourlistDir: C:\PRJ\hybird\initData\
