--- a/src/main/resources/config/custom/custom.yml
+++ b/src/main/resources/config/custom/custom.yml
@@ -7,6 +7,11 @@ user:
     printStackTrace: true
 
 ##########################################################
+# 스케줄 pool 갯수
+##########################################################
+scheduler:
+  poolSize: 5
+##########################################################
 # Page 정의
 ##########################################################
 pageing:
@@ -17,3 +22,4 @@ pageing:
 
 mockdir: D:\PRJ\hybird\mock\
 tourlistDir: C:\PRJ\hybird\initData\
+
