--- a/build.gradle
+++ b/build.gradle
@@ -62,7 +62,9 @@ dependencies {
      * Message 관련
      **********************************************/
     // implementation 'org.springframework.boot:spring-boot-starter-amqp'
-    // implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-websocket
+    implementation 'org.springframework.boot:spring-boot-starter-websocket:3.1.0'
+
 
     /**********************************************
      * 생산성
